--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       cursor: pointer;
       margin: 5px;
     }
-    iframe {
+    #player {
       width: 100%;
       max-width: 800px;
       height: 450px;
@@ -97,19 +97,40 @@
       <input type="number" id="videoCount" min="1" max="50" placeholder="Number of videos">
       <button onclick="generatePlaylist()">🎬 Generate Playlist</button>
     </div>
-    <div id="playerContainer">
-      <iframe id="player" allowfullscreen></iframe>
-    </div>
+    <div id="player"></div>
     <div id="videoControls" style="display: none;">
       <button onclick="skipBack()">⬅️</button>
       <button onclick="skipNext()">➡️</button>
     </div>
   </div>
 
+  <script src="https://www.youtube.com/iframe_api"></script>
   <script>
     let videoQueue = [];
     let videoTitles = [];
     let currentIndex = 0;
+    let ytPlayer;
+
+    function onYouTubeIframeAPIReady() {
+      ytPlayer = new YT.Player("player", {
+        height: "450",
+        width: "800",
+        events: {
+          'onStateChange': onPlayerStateChange
+        },
+        playerVars: {
+          autoplay: 1,
+          rel: 0,
+          modestbranding: 1
+        }
+      });
+    }
+
+    function onPlayerStateChange(event) {
+      if (event.data === YT.PlayerState.ENDED) {
+        skipNext();
+      }
+    }
 
     async function generatePlaylist() {
       const description = document.getElementById("description").value;
@@ -164,10 +185,8 @@
     }
 
     function playCurrent() {
-      if (videoQueue[currentIndex]) {
-        const player = document.getElementById("player");
-        const videoId = videoQueue[currentIndex];
-        player.src = `https://www.youtube.com/embed/${videoId}?autoplay=1&rel=0&modestbranding=1`;
+      if (videoQueue[currentIndex] && ytPlayer && ytPlayer.loadVideoById) {
+        ytPlayer.loadVideoById(videoQueue[currentIndex]);
         updateQueueUI();
       }
     }
